removed default section in feature-childactivities, added share col property instead
1.8.14 (2)

--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.scss
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.scss
@@ -5,13 +5,13 @@ app-feature-childactivities {
   }
 
   .select-col {
-    width: 15%;
+    width: 10%;
   }
 
   .user-col {
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 30%;
+    width: 25%;
   }
 
   .user-avatar {
@@ -25,7 +25,11 @@ app-feature-childactivities {
   }
 
   .type-col {
-    width: 30%;
+    width: 25%;
+  }
+
+  .status-col {
+    width: 15%;
   }
 
   .actions-col {
