--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -1,21 +1,30 @@
-<ion-header *ngIf="modalPage">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar *ngIf="modalPage">
     <ion-buttons slot="start">
       <ion-button (click)="closeModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>{{this.categoryLabel}}</ion-title>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-item [ngStyle]="{'font-size': platform.width() < 400 ? '11px' : '14px'}" lines="none">
+      <div class="select-col"></div>
+      <div class="user-col column-label" (click)="sortDisplay('activity')">{{this.categoryLabel}}<ion-icon [name]="activityAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
+      <div class="type-col column-label" (click)="sortDisplay('type')">Type<ion-icon [name]="typeAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
+      <div class="status-col column-label" (click)="sortDisplay('share')">Sharing<ion-icon [name]="shareAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
+      <div class="actions-col column-label">Actions</div>
+    </ion-item>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> <!--non Plan child Activities-->
+    <!--<ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> &lt;!&ndash;non Plan child Activities&ndash;&gt;
       <ion-label>New {{this.categoryLabel}} (Available in Library)</ion-label>
     </ion-list-header>
-    <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> <!--Plan shown in Relationship-->
+    <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> &lt;!&ndash;Plan shown in Relationship&ndash;&gt;
       <ion-label>Adopted {{this.categoryLabel}}</ion-label>
     </ion-list-header>
-    <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && !moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> <!--Plan shown in non-Relationship-->
+    <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && !moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> &lt;!&ndash;Plan shown in non-Relationship&ndash;&gt;
       <ion-label>Available {{this.categoryLabel}}</ion-label>
     </ion-list-header>
     <ion-grid class="program-grid">
@@ -39,9 +48,9 @@
             </ion-card-header>
             <div class="program-type"><ion-badge color="button1">{{activity.resource['en-US'].value[0]}}</ion-badge></div>
             <div class="program-name light">{{activity.matrix_string[0][0]}}</div>
-            <!--<ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openChildActivity($event, activity, 'manage')" fill="clear" size="small">
+            &lt;!&ndash;<ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openChildActivity($event, activity, 'manage')" fill="clear" size="small">
               <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
-            </ion-button>-->
+            </ion-button>&ndash;&gt;
             <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="removeActivity($event, activity)" fill="clear" size="small" *ngIf="categoryId === '5c915476e172e4e64590e349'">
               <ion-icon name="close" color="primary"></ion-icon>
             </ion-button>
@@ -49,16 +58,10 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-    <ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> <!--Only show for non-Plan child Activities-->
+    <ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> &lt;!&ndash;Only show for non-Plan child Activities&ndash;&gt;
       <ion-label>All {{this.categoryLabel}}</ion-label>
-    </ion-list-header>
-    <ion-item [ngStyle]="{'font-size': platform.width() < 400 ? '11px' : '14px'}">
-      <div class="select-col"></div>
-      <div class="user-col column-label" (click)="sortDisplay('activity')">{{this.categoryLabel}}<ion-icon [name]="activityAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
-      <div class="type-col column-label" (click)="sortDisplay('type')">Type<ion-icon [name]="typeAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
-      <div class="actions-col column-label">Actions</div>
-    </ion-item>
-    <ion-item *ngFor="let activity of activities; index as i" (click)="openChildActivity($event, activity, 'view')" [hidden]="!((activity.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || activity.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && !activity.array_boolean[1])">
+    </ion-list-header>-->
+    <ion-item *ngFor="let activity of activities; index as i" (click)="openChildActivity($event, activity, 'view')" [hidden]="!((activity.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || activity.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
       <div class="select-col">
         <ion-icon color="tertiary" *ngIf="!activity.select" name="radio-button-off" (click)="selectParticipant($event, activity)"></ion-icon>
         <ion-icon color="tertiary" *ngIf="activity.select" name="checkmark-circle" (click)="unselectParticipant($event, activity)"></ion-icon>
@@ -72,25 +75,12 @@
         </ion-label>
       </div>
       <div class="ion-text-wrap type-col column-label">{{activity.resource['en-US'].value[0]}}</div>
+      <div class="ion-text-wrap status-col column-label" style="font-size: 8px"><span *ngIf="activity.array_boolean[1]">Share with Participants</span></div>
       <!--<ion-button class="action-label" (click)="openChildActivity($event, activity, 'view')" fill="clear"><ion-icon name="open-outline"></ion-icon></ion-button>-->
       <ion-buttons class="actions-col ion-justify-content-evenly">
         <ion-button (click)="openChildActivity($event, activity, 'manage')" fill="clear"><ion-icon name="cog-outline"></ion-icon></ion-button>
         <ion-button (click)="pushToMessagePage($event, activity)" fill="clear"><ion-icon name="chatbubbles-outline"></ion-icon></ion-button>
       </ion-buttons>
     </ion-item>
-    <!--<ion-item class="ion-align-self-center" *ngFor="let activity of activities; index as i" [hidden]="!((activity.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || activity.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && !activity.array_boolean[1])">
-      <ion-card class="program-card" (click)="openChildActivity($event, activity, 'view')">
-        <ion-card-header class="ion-no-padding">
-          <div class="program-photo-container">
-            <ion-img class="program-photo" [src]="(activity.assets && activity.assets.length && activity.assets[0]) | background: activity._id"></ion-img>
-          </div>
-        </ion-card-header>
-        <div class="program-type"><ion-badge color="button1">{{activity.resource['en-US'].value[0]}}</ion-badge></div>
-        <div class="program-name light">{{activity.matrix_string[0][0]}}</div>
-        <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openChildActivity($event, activity, 'manage')" fill="clear" size="small">
-          <ion-icon name="cog" color="primary"></ion-icon>
-        </ion-button>
-      </ion-card>
-    </ion-item>-->
   </ion-list>
 </ion-content>
