--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -741,62 +741,76 @@
           <ion-row *ngIf="!matchedPeople.length && !loadAPIBusy && loadStatus === 'completed'" class="ion-justify-content-center">
             <p>The Directory is Empty.</p>
           </ion-row>
-          <ion-slides class="person-slides" #peopleSlides (ionSlideDidChange)="swipePeopleSlide()" [options]="{slidesPerView: 1.1, grabCursor: true, updateOnWindowResize: true}">
-            <ion-slide class="person-slide" *ngFor="let leader of moment.user_list_3" [hidden]="matchedPeople.length || !loadAPIBusy">
-              <ion-card class="person-card">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
-                <ion-card-header>
-                  <div class="person-photo-container">
-                    <ion-img class="person-photo" src="assets/img/avatar-default.jpg"></ion-img>
-                  </div>
-                </ion-card-header>
-                <div class="top-pattern"></div>
-                <div class="middle-pattern"></div>
-                <div class="bottom-pattern"></div>
-                <ion-card-content class="person-content ion-no-padding">
-                  <ion-item lines="none" class="person-content-item ion-no-margin">
-                    <div class="person-content-left" style="margin-top: 10px">
-                      <div class="person-name ion-text-md-uppercase" style="height: 18px">
-                        <ion-skeleton-text animated style="width: 100%"></ion-skeleton-text>
+          <ion-row>
+            <ion-col size-lg="0.5" size-md="1" size-sm="1.5" size-xs="1.5">
+             <button (click)="swipePrevious()" [disabled]="disablePrevBtn" class="slideButton"> 
+               <ion-icon class="arrowButton" name="chevron-back-outline"></ion-icon>
+             </button> 
+            </ion-col>
+            <ion-col size-lg="11" size-md="10" size-sm="9" size-xs="9">
+              <ion-slides class="person-slides" #peopleSlides (ionSlideDidChange)="swipePeopleSlide()" [options]="{slidesPerView: 1.1, grabCursor: true, updateOnWindowResize: true}">
+                <ion-slide class="person-slide" *ngFor="let leader of moment.user_list_3" [hidden]="matchedPeople.length || !loadAPIBusy">
+                  <ion-card class="person-card">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
+                    <ion-card-header>
+                      <div class="person-photo-container">
+                        <ion-img class="person-photo" src="assets/img/avatar-default.jpg"></ion-img>
                       </div>
-                      <div class="person-title">
-                        <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+                    </ion-card-header>
+                    <div class="top-pattern"></div>
+                    <div class="middle-pattern"></div>
+                    <div class="bottom-pattern"></div>
+                    <ion-card-content class="person-content ion-no-padding">
+                      <ion-item lines="none" class="person-content-item ion-no-margin">
+                        <div class="person-content-left" style="margin-top: 10px">
+                          <div class="person-name ion-text-md-uppercase" style="height: 18px">
+                            <ion-skeleton-text animated style="width: 100%"></ion-skeleton-text>
+                          </div>
+                          <div class="person-title">
+                            <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+                          </div>
+                        </div>
+                        <div class="person-content-right" [ngClass]="{'content-border': true }">
+                          <div><ion-skeleton-text animated style="width: 90%"></ion-skeleton-text></div>
+                          <div><ion-skeleton-text animated style="width: 100%"></ion-skeleton-text></div>
+                          <div><ion-skeleton-text animated style="width: 90%"></ion-skeleton-text></div>
+                          <div><ion-skeleton-text animated style="width: 80%"></ion-skeleton-text></div>
+                        </div> <!--Short Biography-->
+                      </ion-item>
+                    </ion-card-content>
+                  </ion-card>
+                </ion-slide>
+                <ion-slide class="person-slide" *ngFor="let person of matchedPeople; trackBy: customTrackBy">
+                  <ion-card class="person-card" (click)="seeUserInfo($event, person)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
+                    <ion-card-header>
+                      <div class="person-photo-container">
+                        <ion-img class="person-photo" *ngIf="person.avatar" [src]="person.avatar"></ion-img>
+                        <ion-img class="person-photo" *ngIf="!person.avatar" src="assets/img/avatar-default.jpg"></ion-img>
                       </div>
-                    </div>
-                    <div class="person-content-right" [ngClass]="{'content-border': true }">
-                      <div><ion-skeleton-text animated style="width: 90%"></ion-skeleton-text></div>
-                      <div><ion-skeleton-text animated style="width: 100%"></ion-skeleton-text></div>
-                      <div><ion-skeleton-text animated style="width: 90%"></ion-skeleton-text></div>
-                      <div><ion-skeleton-text animated style="width: 80%"></ion-skeleton-text></div>
-                    </div> <!--Short Biography-->
-                  </ion-item>
-                </ion-card-content>
-              </ion-card>
-            </ion-slide>
-            <ion-slide class="person-slide" *ngFor="let person of matchedPeople; trackBy: customTrackBy">
-              <ion-card class="person-card" (click)="seeUserInfo($event, person)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
-                <ion-card-header>
-                  <div class="person-photo-container">
-                    <ion-img class="person-photo" *ngIf="person.avatar" [src]="person.avatar"></ion-img>
-                    <ion-img class="person-photo" *ngIf="!person.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-                  </div>
-                </ion-card-header>
-                <div class="top-pattern"></div>
-                <div class="middle-pattern"></div>
-                <div class="bottom-pattern"></div>
-                <ion-card-content class="person-content ion-no-padding">
-                  <ion-item lines="none" class="person-content-item ion-no-margin">
-                    <div class="person-content-left">
-                      <div class="person-name ion-text-md-uppercase">
-                        {{person.first_name}} {{person.last_name}}
-                      </div>
-                      <div class="person-title" [innerHTML]="person.title"></div>
-                    </div>
-                    <div class="person-content-right" [ngClass]="{'content-border': person.bio }" [innerHTML]="person.bio"></div> <!--Short Biography-->
-                  </ion-item>
-                </ion-card-content>
-              </ion-card>
-            </ion-slide>
-          </ion-slides>
+                    </ion-card-header>
+                    <div class="top-pattern"></div>
+                    <div class="middle-pattern"></div>
+                    <div class="bottom-pattern"></div>
+                    <ion-card-content class="person-content ion-no-padding">
+                      <ion-item lines="none" class="person-content-item ion-no-margin">
+                        <div class="person-content-left">
+                          <div class="person-name ion-text-md-uppercase">
+                            {{person.first_name}} {{person.last_name}}
+                          </div>
+                          <div class="person-title" [innerHTML]="person.title"></div>
+                        </div>
+                        <div class="person-content-right" [ngClass]="{'content-border': person.bio }" [innerHTML]="person.bio"></div> <!--Short Biography-->
+                      </ion-item>
+                    </ion-card-content>
+                  </ion-card>
+                </ion-slide>
+              </ion-slides>
+           </ion-col>
+           <ion-col size-lg="0.5" size-md="1" size-sm="1.5" size-xs="1.5">
+             <button (click)="swipeNext()" [disabled]="disableNextBtn" class="slideButton"> 
+               <ion-icon class="arrowButton" name="chevron-forward-outline"></ion-icon>
+             </button>  
+           </ion-col>
+          </ion-row>
         </div>
         <!--List-->
         <div *ngIf="moment.matrix_number[i][3] === 1">
