--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -905,4 +905,47 @@ app-showfeature {
   .tab-button {
     //--indicator-height: 42px;
   }
+
+  //slider Buttons
+  .slideButton{
+    background: transparent;
+    border-radius: 50%;
+    top: 40%;
+    border: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+  
+  
+  .arrowButton{
+    width: 3em;
+    height: 5em;
+  }
+  @media (prefers-color-scheme: light) {
+    .arrowButton{
+      color: #202020;
+    }
+    .slideButton:disabled {
+      .arrowButton{
+        color: #E5E5E5;
+      }
+    }
+    
+  }
+  @media (prefers-color-scheme: dark) {
+    .arrowButton{
+      color: white;
+    }
+    .slideButton:disabled {
+      color: #E5E5E5;
+    }
+    .slideButton:disabled {
+      .arrowButton{
+        color: darkgray;
+      }
+    }
+    
+  }
 }
