--- a/src/app/pages/connect/videoconference/videoconference.page.html
+++ b/src/app/pages/connect/videoconference/videoconference.page.html
@@ -1,4 +1,4 @@
-<ion-content *ngIf="!platform.is('mobileweb')">
+<ion-content *ngIf="!platform.is('mobileweb') || platform.is('tablet')"><!--Desktop, Laptop, Tablet-->
   <div *ngIf="platform.is('cordova')" style="height: 100%">
     <ion-grid style="height: 100%" *ngIf="!userData.readyToControlVideoChat">
       <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
@@ -21,7 +21,7 @@
       </ion-row>
     </ion-grid>
   </div>
-  <div *ngIf="!platform.is('cordova')" style="height: 100%">
+  <div *ngIf="!platform.is('cordova')" style="height: 100%"><!--Mobile App on iOS, Android-->
     <div id="videoConference" *ngIf="!videoEnded"></div>
     <ion-grid style="height: 100%" *ngIf="videoEnded">
       <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
@@ -40,7 +40,7 @@
     </ion-grid>
   </div>
 </ion-content>
-<ion-content *ngIf="platform.is('mobileweb')">
+<ion-content *ngIf="platform.is('mobileweb') && !platform.is('tablet')"><!--Mobile web browser and not tablet-->
   <ion-grid style="height: 100%">
     <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
       <div>
