--- a/src/app/pages/connect/videoconference/videoconference.page.html
+++ b/src/app/pages/connect/videoconference/videoconference.page.html
@@ -1,5 +1,5 @@
-<ion-content *ngIf="!platform.is('mobileweb') || platform.is('tablet')"><!--Desktop, Laptop, Tablet-->
-  <div *ngIf="platform.is('cordova')" style="height: 100%">
+<ion-content *ngIf="!platform.is('mobileweb') || platform.is('tablet')"><!--Desktop, Laptop, Tablet, Mobile App-->
+  <div *ngIf="platform.is('cordova')" style="height: 100%"><!--Mobile App on iOS, Android-->
     <ion-grid style="height: 100%" *ngIf="!userData.readyToControlVideoChat">
       <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
         <ion-spinner name="dots"></ion-spinner>
@@ -21,7 +21,7 @@
       </ion-row>
     </ion-grid>
   </div>
-  <div *ngIf="!platform.is('cordova')" style="height: 100%"><!--Mobile App on iOS, Android-->
+  <div *ngIf="!platform.is('cordova')" style="height: 100%"><!--Desktop, Laptop, Tablet-->
     <div id="videoConference" *ngIf="!videoEnded"></div>
     <ion-grid style="height: 100%" *ngIf="videoEnded">
       <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
