add subpanel support to editfeature
1.8.14 (2)

--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -10,6 +10,9 @@
     </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="saveActivity(false)" id="save-event">{{resource['en-US'].value[4]}}</ion-button> <!--Save-->
+      <ion-button (click)="router.navigate([{ outlets: { sub: null }}])" [hidden]="!subpanel"> <!--close subpanel-->
+        <ion-icon name="close"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
   <ion-toolbar *ngIf="editTemplate && resource && resource._id && moment.resource && moment.resource.field">
