--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -527,7 +527,7 @@ app-groupchat {
 
     ion-icon {
       margin: 0;
-      padding-left: 0px;
+      padding-left: 0;
       padding-right: 0;
     }
 
