--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -9,7 +9,7 @@
     <ion-item [ngStyle]="{'font-size': platform.width() < 400 ? '11px' : '14px'}" lines="none">
       <div class="select-col"></div>
       <div class="user-col column-label" (click)="sortDisplay('activity')">{{this.categoryLabel}}<ion-icon [name]="activityAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
-      <div class="type-col column-label" (click)="sortDisplay('type')">Type<ion-icon [name]="typeAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
+      <!--<div class="type-col column-label" (click)="sortDisplay('type')" *ngIf="!modalPage">Type<ion-icon [name]="typeAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>-->
       <div class="status-col column-label" (click)="sortDisplay('share')">Sharing<ion-icon [name]="shareAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
       <div class="actions-col column-label">Actions</div>
     </ion-item>
@@ -18,49 +18,6 @@
 
 <ion-content>
   <ion-list>
-    <!--<ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> &lt;!&ndash;non Plan child Activities&ndash;&gt;
-      <ion-label>New {{this.categoryLabel}} (Available in Library)</ion-label>
-    </ion-list-header>
-    <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> &lt;!&ndash;Plan shown in Relationship&ndash;&gt;
-      <ion-label>Adopted {{this.categoryLabel}}</ion-label>
-    </ion-list-header>
-    <ion-list-header *ngIf="categoryId === '5c915476e172e4e64590e349' && !moment.categories.includes('5dfdbb547b00ea76b75e5a70')"> &lt;!&ndash;Plan shown in non-Relationship&ndash;&gt;
-      <ion-label>Available {{this.categoryLabel}}</ion-label>
-    </ion-list-header>
-    <ion-grid class="program-grid">
-      <ion-row class="program-row">
-        <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
-          <ion-card class="program-card" (click)="chooseChildActivity()" id="create-new-moment">
-            <ion-card-header class="ion-no-padding" color="lightgrey">
-              <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
-                <ion-icon name="add" color="darkgrey"></ion-icon>
-              </ion-row>
-            </ion-card-header>
-            <div class="program-name dark">Add</div>
-          </ion-card>
-        </ion-col>
-        <ion-col class="ion-align-self-center" *ngFor="let activity of activities; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!((activity.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || activity.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && activity.array_boolean[1])">
-          <ion-card class="program-card" (click)="openChildActivity($event, activity, 'view')">
-            <ion-card-header class="ion-no-padding">
-              <div class="program-photo-container">
-                <ion-img class="program-photo" [src]="(activity.assets && activity.assets.length && activity.assets[0]) | background: activity._id"></ion-img>
-              </div>
-            </ion-card-header>
-            <div class="program-type"><ion-badge color="button1">{{activity.resource['en-US'].value[0]}}</ion-badge></div>
-            <div class="program-name light">{{activity.matrix_string[0][0]}}</div>
-            &lt;!&ndash;<ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openChildActivity($event, activity, 'manage')" fill="clear" size="small">
-              <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
-            </ion-button>&ndash;&gt;
-            <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="removeActivity($event, activity)" fill="clear" size="small" *ngIf="categoryId === '5c915476e172e4e64590e349'">
-              <ion-icon name="close" color="primary"></ion-icon>
-            </ion-button>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    <ion-list-header *ngIf="categoryId !== '5c915476e172e4e64590e349'"> &lt;!&ndash;Only show for non-Plan child Activities&ndash;&gt;
-      <ion-label>All {{this.categoryLabel}}</ion-label>
-    </ion-list-header>-->
     <ion-item *ngFor="let activity of activities; index as i" (click)="openChildActivity($event, activity, 'view')" [hidden]="!((activity.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || activity.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
       <ion-buttons class="select-col">
         <ion-button (click)="selectParticipant($event, activity)" fill="clear" *ngIf="!activity.select">
@@ -70,7 +27,7 @@
           <ion-icon color="tertiary" name="checkmark-circle"></ion-icon>
         </ion-button>
       </ion-buttons>
-      <div class="user-col" *ngIf="modalPage">
+      <div class="user-col" *ngIf="platform.width() < 992">
         <ion-avatar class="user-avatar">
           <ion-img [src]="(activity.assets && activity.assets.length && activity.assets[0]) | background: activity._id"></ion-img>
         </ion-avatar>
@@ -78,17 +35,17 @@
           {{activity.matrix_string[0][0]}}
         </ion-label>
       </div>
-      <div class="avatar-col" *ngIf="!modalPage">
+      <div class="avatar-col" *ngIf="platform.width() >= 992">
         <ion-avatar class="user-avatar">
           <ion-img [src]="(activity.assets && activity.assets.length && activity.assets[0]) | background: activity._id"></ion-img>
         </ion-avatar>
       </div>
-      <div class="name-col" *ngIf="!modalPage">
+      <div class="name-col" *ngIf="platform.width() >= 992">
         <ion-label class="name-label ion-text-wrap">
           {{activity.matrix_string[0][0]}}
         </ion-label>
       </div>
-      <div class="ion-text-wrap type-col column-label">{{activity.resource['en-US'].value[0]}}</div>
+      <!--<div class="ion-text-wrap type-col column-label" *ngIf="!modalPage">{{activity.resource['en-US'].value[0]}}</div>-->
       <div class="ion-text-wrap status-col column-label" style="font-size: 8px"><span *ngIf="activity.array_boolean[1]">Share with Participants</span></div>
       <!--<ion-button class="action-label" (click)="openChildActivity($event, activity, 'view')" fill="clear"><ion-icon name="open-outline"></ion-icon></ion-button>-->
       <ion-buttons class="actions-col ion-justify-content-evenly">
