--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -626,21 +626,22 @@
           <div style="font-size: 14px" class="ion-text-wrap">{{moment.matrix_string[i][0]}}</div>
         </ion-item>
         <ion-row class="ion-padding-horizontal ion-justify-content-end ion-padding-top" style="height: 12px">
-          <ion-note style="font-size: 10px;">{{ currentSaveState }}</ion-note>
+          <!-- currentSaveState display for textarea grabbed from interactableDisplay -->
+          <ion-note style="font-size: 10px;">{{ interactableDisplay[moment.resource.matrix_number[2][i]].currentSaveState }}</ion-note>
         </ion-row>
+        <!-- iterated textarea -->
         <ion-item lines="none" class="ion-margin-vertical">
-          <quill-editor (onEditorCreated)="createQuillEditor($event, interactableDisplay[moment.resource.matrix_number[2][i]])"
-                        (onContentChanged)="respondToTextArea($event, i)" [modules]="{ toolbar: moment.matrix_number[i][2] ? this.quillEditorToolbarConfig : false }" [placeholder]="(moment.matrix_string[i][4] || resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][10])"
-                        [styles]="{'height': moment.matrix_number[i][0] * 30 + ((platform.width() >= 768) && (['owner','admin','staff'].indexOf(userData.user.role) > -1) ? 42 : 0) + 'px'}" format="object"></quill-editor>
+          <!-- run respondToTextArea to update the currentSaveState display -->
+          <quill-editor
+            (onEditorCreated)="createQuillEditor($event, interactableDisplay[moment.resource.matrix_number[2][i]])"
+            (onContentChanged)="respondToTextArea($event, i)"
+            [modules]="{ toolbar: moment.matrix_number[i][2] ? this.quillEditorToolbarConfig : false }" [placeholder]="(moment.matrix_string[i][4] || resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][10])"
+            [styles]="{'height': moment.matrix_number[i][0] * 30 + ((platform.width() >= 768) && (['owner','admin','staff'].indexOf(userData.user.role) > -1) ? 42 : 0) + 'px'}" format="object"></quill-editor>
         </ion-item>
         <ion-list class="results-list" *ngIf="(hasOrganizerAccess || hasLeaderAccess) && moment.categories.includes('5e17acd47b00ea76b75e5a71') && !interactableDisplay[moment.resource.matrix_number[2][i]].collaborative">
           <ion-item *ngIf="resource._id">
             <ion-label>{{resource['en-US'].value[25]}}:</ion-label>
           </ion-item>
-          <!--<ion-item lines="none">
-            <div class="moment-label"><ion-icon class="side-icon" color="grey" name="help"></ion-icon></div>
-            <ion-label class="label-title">{{moment.resource['en-US'].matrix_string[i][0]}}</ion-label>
-          </ion-item>-->
           <div *ngFor="let response of responses">
             <div *ngFor="let interactable of response.matrix_string; let interactableIndex = index;">
               <div *ngIf="interactable[0] === moment.resource.matrix_number[2][i].toString()">
