expand pickfeature-popover to allow multi-type display
1.8.14 (2)

--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -61,9 +61,9 @@
               <ion-card-header>
                 <ion-card-title>Create a New Plan</ion-card-title>
               </ion-card-header>
-              <ion-card-content>
+              <!--<ion-card-content>
                 <li>Embark on a Journey of Growth</li>
-              </ion-card-content>
+              </ion-card-content>-->
             </ion-card>
           </ion-col>
           <ion-col size-xs="12" size-sm="6">
@@ -71,9 +71,9 @@
               <ion-card-header>
                 <ion-card-title>Choose from Available Template</ion-card-title>
               </ion-card-header>
-              <ion-card-content>
+              <!--<ion-card-content>
                 <li>Grow with the Guidance from a Mentor</li>
-              </ion-card-content>
+              </ion-card-content>-->
             </ion-card>
           </ion-col>
         </ion-row>
