--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -12,6 +12,7 @@
     <ion-title *ngIf="step === 1 && categoryId === '5c915476e172e4e64590e349'">Choose a Plan</ion-title>
     <ion-title *ngIf="step === 1 && categoryId === '5e1bbda67b00ea76b75e5a73'">Choose a Content</ion-title>
     <ion-title *ngIf="step === 1 && categoryId === '5e17acd47b00ea76b75e5a71'">Choose an Onboarding Process</ion-title>
+    <ion-title *ngIf="step === 1 && !categoryId">Choose from Available Templates</ion-title>
 
     <ion-title *ngIf="step > 1">{{selectedMoments[0].matrix_string[0][0]}}</ion-title>
   </ion-toolbar>
@@ -90,11 +91,10 @@
       </ion-segment>
     </ion-toolbar>
     <div *ngIf="currentView === 'new'" class="new-section">
-      <div *ngFor="let parent of samples; index as i">
-        <ion-label class="program-title ion-margin" *ngIf="(categoryId !== '5e17acd47b00ea76b75e5a71') && parent.matrix_string">{{parent.matrix_string[0][0]}}</ion-label>
+        <!--<ion-label class="program-title ion-margin" *ngIf="(categoryId !== '5e17acd47b00ea76b75e5a71') && parent.matrix_string">{{parent.matrix_string[0][0]}}</ion-label>-->
         <ion-grid class="program-grid">
           <ion-row class="program-row">
-            <ion-col *ngIf="allowCreate && i === 0" class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
+            <ion-col *ngIf="allowCreate" class="ion-align-self-center" size-xs="6">
               <ion-card class="program-card" (click)="createMoment()" id="create-new-moment">
                 <ion-card-header class="ion-no-padding" color="lightgrey">
                   <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
@@ -104,7 +104,7 @@
                 <div class="program-name dark">Create</div>
               </ion-card>
             </ion-col>
-            <ion-col class="ion-align-self-center" *ngFor="let sample of parent.sample_activities; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!(sample.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || sample.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1)">
+            <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!(sample.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || sample.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
               <ion-card class="program-card" (click)="selectSample(sample)">
                 <ion-card-header class="ion-no-padding">
                   <div class="program-photo-container">
@@ -118,9 +118,8 @@
                 </ion-button>
               </ion-card>
             </ion-col>
-          </ion-row>
-        </ion-grid>
-      </div>
+        </ion-row>
+      </ion-grid>
     </div>
     <ion-grid class="program-grid" *ngIf="currentView === 'recent'">
       <ion-row class="program-row">
